--- a/~Cases/Combustion/GRImech/readme
+++ b/~Cases/Combustion/GRImech/readme
@@ -1,1 +1,6 @@
-
+cht + Transient + RAS + radiation
+chtMultiRegionFoam
+GRI Mech
+3D Heat Loss Expression
+kOmegaSST
+fvDOM (greyGasMeanAdsorptionEmission) + opaque solid radiation
