--- a/~Cases/buoyantFlow/transientChimney_FixedTemp/readme
+++ b/~Cases/buoyantFlow/transientChimney_FixedTemp/readme
@@ -3,3 +3,5 @@ Flow arises due to buoyancy effects.
 Both inlet and outlet are Pressure BCs (Ambient)
 
 Fixed temperature in the middle of the geometry (hot) causes the air to rise through the chimney, creating a flow
+
+Can add radiation and combustion model 
